# retailguard-data-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: retailguard_pipeline.py
docker/: airflow.Dockerfile  mock-api.Dockerfile  pipeline.Dockerfile  retailguard-entrypoint.sh
docs/: architecture.md  cloud_cost_guardrails.md  cloud_optional.md  dashboard.md  data_dictionary.md  local_demo.md  pii_policy.md  portfolio_evidence.md  portfolio_review.md  runbook.md
quality/fixtures/: bad_order_items.csv
sql/oltp/: 001_schema.sql
src/retailguard/: __init__.py  cli.py  cloud.py  config.py  db.py  extract.py  mock_api.py  paths.py  quality.py  state.py  synthetic.py  transform.py  warehouse.py
tests/: conftest.py  test_cloud.py  test_extract.py  test_pipeline_contract.py
